    break the cups-deviced printer discovery mechanism and so the printers
    get ignored. This patch allows newline characters in device IDs
    (LP: #468701).

  [ Martin Pitt ]
  * Add support-gzipped-charmaps.dpatch: Support gzipped charset → UTF8 maps;
    they compress very well and take a lot of space.
  * debian/rules: Compress /usr/share/cups/charmaps/*.txt in cups-common.

 -- Till Kamppeter <till.kamppeter@gmail.com>  Sat,  1 May 2010 20:52:33 +0200

cups (1.4.3-1) unstable; urgency=low

  [ Till Kamppeter ]
  * debian/filters/pstopdf: Use "-dUseCIEColor" for the Ghostscript call in the
    pstopdf filter, to eliminate the warning "Set UseCIEColor for
    UseDeviceIndependentColor to work properly.".

  [ Martin Pitt ]
  * New upstream bug fix release. See http://www.cups.org/articles.php?L594
    for details.
  * Drop CVE-2010-0393.dpatch, upstream now.
  * Update usb-backend-both-usblp-and-libusb.dpatch for new version.
  * select_use_after_free.dpatch: Add additional fix by Tim Waugh and Vincent
    Danen for CVE-2010-0302, and update tag header. (Closes: #572940)

 -- Martin Pitt <mpitt@debian.org>  Fri, 09 Apr 2010 16:19:16 +0200

cups (1.4.2-10) unstable; urgency=low

  [ Till Kamppeter ]
  * debian/local/filters/pdf-filters/pdftopdf/P2PDoc.cxx: Output of the
    pdftopdf filter was not completely complying with the Adobe specs for PDF.
    Thanks to Duncan Lock for finding and reporting the bug and Johann Felix
    Soden for creating the patch to fix it (LP: #544636).

  [ Martin Pitt ]
  * Add no-conffile-timestamp.dpatch: Disable time stamps in conffiles, to
    avoid ever-changing files in /etc. Thanks Joey Hess!
    (Rejected upstream, STR#3067; Closes: #549673)
  * CVE-2010-0393.dpatch: Replace with patch from upstream, and tag
    header. (Closes: #572940)
  * debian/local/filters/pdf-filters/*: Disable call of setErrorFunction() on
    armel for now, since armel's libpoppler is broken. This works around