@@ -268,9 +268,7 @@ int main(int argc, char *argv[]) {
   int rowpad;
   GBool reverseVideo;
 
-#ifndef __arm__
   setErrorFunction(::myErrorFun);
-#endif
 #ifdef GLOBALPARAMS_HAS_A_ARG
   globalParams = new GlobalParams(0);
 #else
